# arbiter

./: CLAUDE.md  EXPERIMENT_TRACKER.md  README.md  agent_analysis_conversation.json  analyze_experiments.py  config.yaml  config_da.yaml  generate_conversations.py  pyproject.toml  run_experiment.py  witch other-branch
arbiter/: __init__.py  __main__.py  agent.py  cli.py  config.py  core.py  experiments.py  judge.py  plot.py  summary.py
arbiter/tools/: __init__.py  ask_model.py  inspect_cot.py  inspect_system_prompt.py  wait_and_observe.py
conversations/: truthful_fragment_collusion.json
examples/: ag2_misalignment_demo.py  judge_filtered_dataset.py  mock_conversation.py  system_prompts.json  topics.json
examples/experiments/: =0.46.1  misaligned_model.json  misaligned_sys_prompt.json  misaligned_sys_prompt_and_model.json  misaligned_sys_prompt_aware.json  misaligned_sys_prompt_collusion.json  truthful_fragment_collusion.json
results/experimental/: truthful_fragment_collusion_b5.json
results/misaligned_model/: conversation.json  metadata.json
results/misaligned_sys_prompt/: conversation.json  metadata.json
results/misaligned_sys_prompt_and_model/: conversation.json  metadata.json
results/v0.1/: agent_analysis_mock_conversation.json
results/v0.2-cont/: agent_analysis_mock_conversation.json  mock_conversation.json
results/v0.3-sim-cont/: ag2_conversation.json  agent_analysis_ag2_conversation.json
results/v0.4-sim-cont-30/: ag2_conversation.json  agent_analysis_ag2_conversation.json
results/v0.5/: analysis_stats.json  exp_results.csv  exp_summary.json
results/v0.5/analysis_evil_sys_promp_inspection/: r01.json  r02.json  r03.json  r04.json  r05.json  r06.json  r07.json  r08.json  r09.json  r10.json  r11.json  r12.json  r13.json  r14.json  r15.json  r16.json  r17.json  r18.json  r19.json  r20.json
results/v0.5/analysis_evil_sys_promp_only_observation/: r01.json  r02.json  r03.json  r04.json  r05.json  r06.json  r07.json  r08.json  r09.json  r10.json  r11.json  r12.json  r13.json  r14.json  r15.json  r16.json  r17.json  r18.json  (+2 more)
results/v0.6/: exp_results.csv  exp_summary.json
tests/: test_agent_offline.py  test_judge_offline.py  test_tool_registry.py  test_truthful_fragment_fixture.py
(+173 files in other folders)
