[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arbiter"
version = "0.1.0"
description = "Run HuggingFace models through freeform questions and judge responses with an LLM."
requires-python = ">=3.12"
dependencies = [
    "torch",
    "transformers",
    "matplotlib",
    "numpy",
    "openai",
    "python-dotenv",
    "pyyaml",
    "datasets",
    "peft",
    "ag2>=0.12.2",
]

[project.scripts]
arbiter = "arbiter.cli:main"

[tool.setuptools]
packages = ["arbiter"]
